--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/BuildWEBGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/BuildWEBGL.data.gz",
-        frameworkUrl: buildUrl + "/BuildWEBGL.framework.js.gz",
-        codeUrl: buildUrl + "/BuildWEBGL.wasm.gz",
+        dataUrl: buildUrl + "/BuildWEBGL.data",
+        frameworkUrl: buildUrl + "/BuildWEBGL.framework.js",
+        codeUrl: buildUrl + "/BuildWEBGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CannonWEBGLGame",
