--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         align-items: center;
       }
       #unity-canvas {
-        width: 100%;
-        height: 100%;
+        /* remove any padding and margin */
+        margin: 0;
+        padding: 0;
       }
     </style>
   </head>
@@ -32,6 +33,17 @@
     </div>
     <script src="Build/BuildWEBGL.loader.js"></script>
     <script>
+      function setCanvasSize() {
+        var canvas = document.querySelector("#unity-canvas");
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+      }
+
+      window.onload = function() {
+        setCanvasSize();
+        window.addEventListener('resize', setCanvasSize);
+      };
+
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/BuildWEBGL.data",
         frameworkUrl: "Build/BuildWEBGL.framework.js",
@@ -40,8 +52,6 @@
         companyName: "DefaultCompany",
         productName: "CannonWEBGLGame",
         productVersion: "0.1",
-        matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
     </script>
   </body>
