--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       #unity-container {
         width: 100%;
         height: 100%;
-        background-color: #231F20;
+        overflow: hidden;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -35,8 +35,9 @@
     <script>
       function setCanvasSize() {
         var canvas = document.querySelector("#unity-canvas");
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+        var container = document.querySelector("#unity-container");
+        canvas.width = container.clientWidth;
+        canvas.height = container.clientHeight;
       }
 
       window.onload = function() {
