--- a/index.html
+++ b/index.html
@@ -15,41 +15,23 @@
       #unity-container {
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        background-color: #231F20;
         display: flex;
         justify-content: center;
         align-items: center;
       }
       #unity-canvas {
-        /* remove any padding and margin */
-        margin: 0;
-        padding: 0;
+        width: 100%;
+        height: 100%;
       }
     </style>
   </head>
-<<<<<<< HEAD
-  <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=540 height=900 style="width: 540px; height: 900px; background: #231F20"></canvas>
-=======
   <body>
     <div id="unity-container">
       <canvas id="unity-canvas"></canvas>
     </div>
->>>>>>> 0279c3fd59ff8f23b0d0eed4f431da436b230026
     <script src="Build/BuildWEBGL.loader.js"></script>
     <script>
-      function setCanvasSize() {
-        var canvas = document.querySelector("#unity-canvas");
-        var container = document.querySelector("#unity-container");
-        canvas.width = container.clientWidth;
-        canvas.height = container.clientHeight;
-      }
-
-      window.onload = function() {
-        setCanvasSize();
-        window.addEventListener('resize', setCanvasSize);
-      };
-
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/BuildWEBGL.data",
         frameworkUrl: "Build/BuildWEBGL.framework.js",
@@ -58,6 +40,8 @@
         companyName: "DefaultCompany",
         productName: "CannonWEBGLGame",
         productVersion: "0.1",
+        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
     </script>
   </body>
