--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Unity WebGL Player | CannonWEBGLGame</title>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+      }
+      
+      #unity-canvas {
+        width: 100%;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=540 height=960 style="width: 540px; height: 960px; background: #231F20"></canvas>
+    <canvas id="unity-canvas" width=540 height=960 style="width: 100%; height: 100vh; background: #231F20"></canvas>
     <script src="Build/BuildWEBGL.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
@@ -15,13 +26,6 @@
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
-
-        var canvas = document.querySelector("#unity-canvas");
-        canvas.style.width = "50%";
-        canvas.style.height = "50%";
-        canvas.style.position = "fixed";
-
-        document.body.style.textAlign = "left";
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
@@ -32,8 +36,8 @@
         companyName: "DefaultCompany",
         productName: "CannonWEBGLGame",
         productVersion: "0.1",
-        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
+        matchWebGLToCanvasSize: true,
+        devicePixelRatio: window.devicePixelRatio,
       });
     </script>
   </body>
