--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <style>
       body {
         margin: 0;
+        padding: 0;
         overflow: hidden;
       }
       
       #unity-canvas {
-        width: 100%;
-        height: 100vh;
+        width: 540px;
+        height: 960px;
+        background: #231F20;
       }
     </style>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=540 height=960 style="width: 100%; height: 100vh; background: #231F20"></canvas>
+    <canvas id="unity-canvas" width=540 height=960 style="width: 540px; height: 960px; background: #231F20"></canvas>
     <script src="Build/BuildWEBGL.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
