--- a/index.html
+++ b/index.html
@@ -8,38 +8,25 @@
     <style>
       body {
         margin: 0;
-<<<<<<< HEAD
-=======
         padding: 0;
->>>>>>> 6235615efef5b5668784933873a54f3f462c7339
         overflow: hidden;
       }
       
       #unity-canvas {
-        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        width: calc(1080 / 1920 * 100vh);
         height: 100vh;
-<<<<<<< HEAD
-=======
         background: #231F20;
->>>>>>> 6235615efef5b5668784933873a54f3f462c7339
       }
     </style>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width=540 height=960 style="width: 100%; height: 100vh; background: #231F20"></canvas>
+    <canvas id="unity-canvas" style="background: #231F20"></canvas>
     <script src="Build/BuildWEBGL.loader.js"></script>
     <script>
-<<<<<<< HEAD
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-      }
-
-=======
->>>>>>> 6235615efef5b5668784933873a54f3f462c7339
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/BuildWEBGL.data",
         frameworkUrl: "Build/BuildWEBGL.framework.js",
