--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <canvas id="unity-canvas" style="background: #231F20"></canvas>
     <script src="Build/BuildWEBGL.loader.js"></script>
     <script>
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+        // Mobile device style: fill the whole browser client area with the game canvas:
+        var meta = document.createElement('meta');
+        meta.name = 'viewport';
+        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+        document.getElementsByTagName('head')[0].appendChild(meta);
+      }
       createUnityInstance(document.querySelector("#unity-canvas"), {
         dataUrl: "Build/BuildWEBGL.data",
         frameworkUrl: "Build/BuildWEBGL.framework.js",
