--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
     </style>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" style="background: #231F20"></canvas>
-    <script src="Build/BuildWEBGL.loader.js"></script>
+    <canvas id="unity-canvas" style="background: #231F20"></canvas><!-- Модальное окно рекламы -->
+	<div id="ad-modal" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 300px; height: 200px; background-color: white; box-shadow: 0px 0px 10px rgba(0,0,0,0.5); z-index: 1000;">
+		<p style="padding: 20px; font-size: 16px; text-align: center;">Здесь ваша реклама</p>
+		<button onclick="closeAd()" style="position: absolute; top: 10px; right: 10px; padding: 5px;">Закрыть</button>
+	</div>
+    <script src="Build/BuildWebGLNew.loader.js"></script>
     <script>
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
@@ -33,18 +37,40 @@
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
+
+        var canvas = document.querySelector("#unity-canvas");
+        canvas.style.width = "100%";
+        canvas.style.height = "100%";
+        canvas.style.position = "fixed";
+
+        document.body.style.textAlign = "left";
       }
+
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/BuildWEBGL.data",
-        frameworkUrl: "Build/BuildWEBGL.framework.js",
-        codeUrl: "Build/BuildWEBGL.wasm",
+        dataUrl: "Build/BuildWebGLNew.data",
+        frameworkUrl: "Build/BuildWebGLNew.framework.js",
+        codeUrl: "Build/BuildWebGLNew.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "CannonWEBGLGame",
         productVersion: "0.1",
-        matchWebGLToCanvasSize: true,
-        devicePixelRatio: window.devicePixelRatio,
+        // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
+        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
+    </script>
+	<script>
+      function openAd() {
+        document.getElementById('ad-modal').style.display = 'block';
+      }
+
+      function closeAd() {
+        document.getElementById('ad-modal').style.display = 'none';
+      }
+
+      // Открытие окна по команде из Unity (при вызове OpenAdWindow в Unity)
+      function OpenAdWindow() {
+        openAd();
+      }
     </script>
   </body>
 </html>
